<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/cencrypt_text_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text_edit_encrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/key_edit_encrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/hint2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_encrypt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="showEncrypt"
                android:padding="15dp"
                android:singleLine="true"
                android:text="@string/encrypt"
                android:textAllCaps="true" />


            <Button
                android:id="@+id/button_send_encrypt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="sendMessage"
                android:padding="15dp"
                android:text="@string/send"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_copy_encrypt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="clear"
                android:padding="15dp"
                android:text="@string/clear"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/encrypt_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="10dp"
            android:text="@string/result"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</ScrollView>