<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/cdecrypt_file_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/decrypt_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/file_hint_decrypt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/decrypt_file_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/key_edit_decrypt_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-17dp"
            android:hint="@string/hint2"
            android:inputType="text"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="showDecrypt"
                android:padding="15dp"
                android:text="@string/decrypt"
                android:textAllCaps="true" />


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="showFileChooser"
                android:padding="15dp"
                android:text="@string/load"
                android:textAllCaps="true" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="clear"
                android:padding="15dp"
                android:text="@string/clear"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/decrypt_file_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/decrypt_send_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:text="@string/send"
                android:onClick="sendMessage"
                android:visibility="invisible" />

            <Button
                android:id="@+id/decrypt_save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:text="@string/save"
                android:onClick="saveFile"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
